force-app/main/default/objects/Lead/fields/ULBC_Coach_Notes__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Coach_Notes__c</fullName>
    <label>Coach Notes</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Free-text notes from the coach about the recruitment prospect.</description>
</CustomField>