force-app/main/default/objects/Lead/fields/ULBC_Current_Institution__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Current_Institution__c</fullName>
    <label>Current School / University</label>
    <type>Text</type>
    <length>100</length>
    <description>School or university the prospect currently attends, before joining ULBC.</description>
</CustomField>