force-app/main/default/objects/Lead/fields/ULBC_Current_Rowing_Event__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Current_Rowing_Event__c</fullName>
    <label>Current Rowing Event</label>
    <type>Text</type>
    <length>100</length>
    <description>Rowing events the prospect currently competes in at their school/university, pre-ULBC (e.g. Women's 4-, Men's 8+).</description>
</CustomField>