force-app/main/default/objects/Lead/fields/ULBC_Gender__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <description>Gender of the recruitment prospect.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Male</fullName><default>false</default><label>Male</label></value>
            <value><fullName>Female</fullName><default>false</default><label>Female</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>