force-app/main/default/objects/Lead/fields/ULBC_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Graduation_Year__c</fullName>
    <label>Graduation Year</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Expected graduation year from current institution. Indicates when the prospect would be available to join ULBC.</description>
</CustomField>