force-app/main/default/objects/Lead/fields/ULBC_Recruitment_Source__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Recruitment_Source__c</fullName>
    <label>Recruitment Source</label>
    <type>Picklist</type>
    <description>How the recruitment prospect was identified.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>BUCS Results</fullName><default>false</default><label>BUCS Results</label></value>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Direct Inquiry</fullName><default>false</default><label>Direct Inquiry</label></value>
            <value><fullName>Trials</fullName><default>false</default><label>Trials</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>